Conectando ao rabbit

--- a/Exercício-5/Cepedi.Banco.Analise/src/Cepedi.Banco.Analise.Api/appsettings.Development.json
+++ b/Exercício-5/Cepedi.Banco.Analise/src/Cepedi.Banco.Analise.Api/appsettings.Development.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
   "DefaultConnection": "Server=cepedi-rds.ctoouoyswtmi.us-east-2.rds.amazonaws.com,1433;Database=Banco.Analise;User Id=cepedi;Password=V8A0pOu54Q1s;TrustServerCertificate=True"
-  }
+  },
+  "RabbitMQ": {
+  "Hostname": "srv508250.hstgr.cloud",
+  "QueueName": "Fila.Teste.Gabriel",
+  "User": "aluno",
+  "Password": "changeme"
+}
 }
